--- a/client/src/styles/OrderPageHome.module.css
+++ b/client/src/styles/OrderPageHome.module.css
@@ -2,3 +2,16 @@
   display: flex;
   flex-direction: column;
 }
+
+.mainSection{
+  display:flex;
+  margin: 0 7%;
+
+}
+
+.tempCheckout{
+  width: 375px;
+  height: 300px;
+  border: gray solid 2px;
+  border-radius: 20px;
+}
