--- a/client/src/styles/OrderPageHome.module.css
+++ b/client/src/styles/OrderPageHome.module.css
@@ -1,23 +1,40 @@
 .navOptContainer {
+  position: sticky;
+  top: 0;
+
   display: flex;
   flex-direction: column;
+
+  width: 100%;
 }
 
-.mainSection{
-  display:flex;
+.mainSection {
+  /* display: flex; */
+  display: grid;
+
+  /* grid-template-columns: auto 500px; */
+  grid-template-columns: auto 300px;
+  /* grid-gap: 20px; */
   margin: 30px 7%;
-
 }
 
-.menuContainer{
+.menuContainer {
   display: flex;
   flex-direction: column;
-  text-align: center;
 }
 
-.tempCheckout{
-  width: 375px;
+.tempCheckoutContainer{
+  display:flex;
+  justify-content: center;
+}
+.tempSummary {
+  position: fixed;
+
+  width: 300px;
   height: 300px;
-  border: gray solid 2px;
+
+  margin-top: 70px;
+
+  border: #ccc solid 2px;
   border-radius: 20px;
 }
