--- a/client/src/styles/OrderPageHome.module.css
+++ b/client/src/styles/OrderPageHome.module.css
@@ -9,13 +9,14 @@
 }
 
 .mainSection {
-  /* display: flex; */
   display: grid;
-
-  /* grid-template-columns: auto 500px; */
   grid-template-columns: auto 300px;
-  /* grid-gap: 20px; */
+
   margin: 30px 7%;
+}
+
+.category{
+  padding-left: 60px;
 }
 
 .menuContainer {
@@ -23,8 +24,8 @@
   flex-direction: column;
 }
 
-.tempCheckoutContainer{
-  display:flex;
+.tempCheckoutContainer {
+  display: flex;
   justify-content: center;
 }
 .tempSummary {
