Added existing user error message to signup modal

--- a/client/src/styles/SignUp.module.css
+++ b/client/src/styles/SignUp.module.css
@@ -46,6 +46,13 @@
   padding: 16px;
 }
 
+.alertContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .psw {
   float: right;
   padding-top: 16px;
